--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 os: linux
 before_install:
-    - sudo apt-get install -y cmake zlib1g-dev libpng-dev git cmake nasm
+    - sudo apt-get install -y cmake zlib1g-dev libpng12-dev git nasm
 compiler:
     - clang
     - gcc
