--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
 os: linux
+dist: bionic
 before_install:
     - sudo apt-get update -y && sudo apt-get install -y cmake zlib1g-dev libpng-dev git nasm
 compiler:
