--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
 compiler:
     - clang
     - gcc
-script: cmake -G"Unix Makefiles" . && make SHARED=0 CC='gcc -static' && make test
+script: cmake -G"Unix Makefiles" . && make SHARED=0 CC='gcc -static' && make install
 
