update travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: c
 #dist: bionic
 before_install:
     - sudo apt-get install -y cmake zlib1g-dev git libpng16-16 nasm
-    # - wget http://archive.ubuntu.com/ubuntu/pool/universe/libp/libpng1.6/libpng16-16_1.6.20-2_amd64.deb
-    # - sudo dpkg -i libpng16-16_1.6.20-2_amd64.deb
+    - wget http://archive.ubuntu.com/ubuntu/pool/universe/libp/libpng1.6/libpng16-16_1.6.20-2_amd64.deb
+    - sudo dpkg -i libpng16-16_1.6.20-2_amd64.deb
 compiler:
     # - clang
     - gcc
