--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ compiler:
     - gcc
 script:
     #- if [ "$TRAVIS_OS_NAME" = "linux" ]; then mkdir build && cd build && cmake -G"Unix Makefiles" -DPNG_SUPPORTED=TRUE ../ && make SHARED=0 CC='gcc -static' && make install ; fi
-    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then mkdir build && cd build && cmake -G"Unix Makefiles" -DPNG_SUPPORTED=TRUE -DZLIB_LIBRARY=/usr/local/Cellar/zlib/1.2.11/lib/libz.dylib -DPNG_PNG_INCLUDE_DIR=/usr/local/Cellar/libpng/1.6.37 -DPNG_LIBRARY=/usr/local/Cellar/libpng/1.6.37/lib/libpng.a ../ && make SHARED=0 CC='gcc -static' && make install ; fi
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then mkdir build && cd build && cmake -G"Unix Makefiles" -DPNG_SUPPORTED=TRUE -DZLIB_LIBRARY=/usr/local/Cellar/zlib/1.2.11/lib/libz.a -DPNG_PNG_INCLUDE_DIR=/usr/local/Cellar/libpng/1.6.37/include -DPNG_LIBRARY=/usr/local/Cellar/libpng/1.6.37/lib/libpng.a ../ && make SHARED=0 CC='gcc -static' && make install ; fi
 
